crates/forge_open_router/src/snapshots/forge_open_router__request__tests__tool_message_typescript_code.snap
---
source: crates/forge_open_router/src/request.rs
expression: router_message
snapshot_kind: text
---
{
  "role": "tool",
  "content": "<tool_result><tool_name>rust_tool</tool_name><success>{ \"code\": \"fn main&lt;T&gt;(gt: T) {let b = &amp;gt; }\"}</success></tool_result>",
  "name": "rust_tool",
  "tool_call_id": "456"
}
