crates/forge_open_router/src/snapshots/forge_open_router__request__tests__tool_message_with_special_chars.snap
---
source: crates/forge_open_router/src/request.rs
expression: router_message
snapshot_kind: text
---
{
  "role": "tool",
  "content": "<tool_result><tool_name>html_tool</tool_name><success>{\n                \"html\": \"&lt;div class=\\\"container\\\"&gt;&lt;p&gt;Hello &lt;World&gt;&lt;/p&gt;&lt;/div&gt;\",\n                \"elements\": [\"&lt;span&gt;\", \"&lt;br/&gt;\", \"&lt;hr&gt;\"],\n                \"attributes\": {\n                    \"style\": \"color: blue; font-size: 12px;\",\n                    \"data-test\": \"&lt;test&gt;&amp;value&lt;/test&gt;\"\n                }\n            }</success></tool_result>",
  "name": "html_tool",
  "tool_call_id": "456"
}
