crates/forge_open_router/src/snapshots/forge_open_router__request__tests__user_message_conversion.snap
---
source: crates/forge_open_router/src/request.rs
expression: router_message
snapshot_kind: text
---
{
  "role": "user",
  "content": "Hello"
}
